Texture Paint Stencil Mask crash #74925

Closed
opened 2020-03-19 12:45:36 +01:00 by Philipp Oeser · 4 comments
Member

System Information
Operating system: Linux-5.5.8-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 09:43, hash: 7e9575f7a1
Worked: 5593efec01^

Short description of error
Texture Paint Stencil Mask crash

Exact steps for others to reproduce the error
stencil_mask_crash.blend

  • Open blend
  • In Toolsettings header, Masking (next to Texture Slots), Stencil Mask is already enabled
  • choose any image here (e.g. browse for one)
  • BOOM

Caused by 5593efec01

Crash happens here (where iuser is NULL)

1  GPU_texture_from_blender gpu_draw.c       880  0xa65676f 
2  OVERLAY_paint_cache_init overlay_paint.c  88   0x3d40d28 
3  OVERLAY_cache_init       overlay_engine.c 134  0x3d32e92 
4  drw_engines_cache_init   draw_manager.c   961  0x3ce3935 
5  DRW_draw_render_loop_ex  draw_manager.c   1467 0x3ce4d9b 
6  DRW_draw_view            draw_manager.c   1399 0x3ce4ac2 
7  view3d_draw_view         view3d_draw.c    1602 0x4683bfa 
8  view3d_main_region_draw  view3d_draw.c    1626 0x4683ca1 
9  ED_region_do_draw        area.c           534  0x408904d 
10 wm_draw_window_offscreen wm_draw.c        662  0x39f8752 
11 wm_draw_window           wm_draw.c        786  0x39f8c52 
12 wm_draw_update           wm_draw.c        990  0x39f929b 
13 WM_main                  wm.c             453  0x39f5e60 
14 main                     creator.c        524  0x35b32a9 

Got a fix for this, will submit next..

**System Information** Operating system: Linux-5.5.8-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 **Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 09:43, hash: `7e9575f7a1` Worked: 5593efec01^ **Short description of error** Texture Paint Stencil Mask crash **Exact steps for others to reproduce the error** [stencil_mask_crash.blend](https://archive.blender.org/developer/F8415631/stencil_mask_crash.blend) - Open blend - In Toolsettings header, `Masking` (next to `Texture Slots`), `Stencil Mask` is already enabled - choose any image here (e.g. browse for one) - BOOM Caused by 5593efec01 Crash happens here (where `iuser` is NULL) ``` 1 GPU_texture_from_blender gpu_draw.c 880 0xa65676f 2 OVERLAY_paint_cache_init overlay_paint.c 88 0x3d40d28 3 OVERLAY_cache_init overlay_engine.c 134 0x3d32e92 4 drw_engines_cache_init draw_manager.c 961 0x3ce3935 5 DRW_draw_render_loop_ex draw_manager.c 1467 0x3ce4d9b 6 DRW_draw_view draw_manager.c 1399 0x3ce4ac2 7 view3d_draw_view view3d_draw.c 1602 0x4683bfa 8 view3d_main_region_draw view3d_draw.c 1626 0x4683ca1 9 ED_region_do_draw area.c 534 0x408904d 10 wm_draw_window_offscreen wm_draw.c 662 0x39f8752 11 wm_draw_window wm_draw.c 786 0x39f8c52 12 wm_draw_update wm_draw.c 990 0x39f929b 13 WM_main wm.c 453 0x39f5e60 14 main creator.c 524 0x35b32a9 ``` Got a fix for this, will submit next..
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

This issue was referenced by 9ace7e2439

This issue was referenced by 9ace7e2439781457bed40994519a26cd22e63a78
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2020-03-19 15:27:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74925
No description provided.