Fix T74925: Texture Paint Stencil Mask crash

Use first texture if we dont have an ImageUser.

Maniphest Tasks: T74925

Differential Revision: https://developer.blender.org/D7181